[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "api-spend"
version = "1.0.0"
description = "Spend data plane: sync API costs, local store, time-range queries for dashboards"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
api_spend = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
